--- a/eat/public/assets/css/global.css
+++ b/eat/public/assets/css/global.css
@@ -333,7 +333,7 @@ figure{
     transform: translateX(-50%);
     border-radius: 50%;
     z-index: 1;
-    background: var(--color-two);
+    background: #000000;
 }
 
 .btn-style-one:hover:before{
@@ -458,7 +458,7 @@ figure{
     position: absolute;
     top: 100%;
     display: block;
-    color: var(--color-two);
+    color: black;
     -webkit-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
     transition: all 0.3s ease;
@@ -472,7 +472,7 @@ figure{
 }
 
 .btn-style-two:hover .btn-wrap .text-two{
-    color: var(--color-two);
+    color: black;
 }
 
 .btn-style-two:hover{
@@ -524,7 +524,7 @@ img{
     bottom:20px;
     width:50px;
     height:50px;
-    color: var(--color-two);
+    color: black;
     font-size: 20px;
     line-height: 50px;
     text-align:center;
