--- a/eat/public/assets/css/style.css
+++ b/eat/public/assets/css/style.css
@@ -458,7 +458,7 @@
   z-index:100;
   opacity: 1;
   text-align:left;
-  background: var(--color-two);
+  background: black;
   border: none;
   border-radius:0;
   -webkit-box-shadow:2px 2px 10px 1px rgba(0,0,0,0.03),-2px 0px 10px 1px rgba(0,0,0,0.03);
@@ -498,7 +498,7 @@
   right: 100%;
   width: 2000px;
   height: 100%;
-  background: var(--color-two);
+  background: black;
 }
 
 .main-menu .navigation > li.dropdown.has-mega-menu > ul:after{
@@ -508,7 +508,7 @@
   left: 100%;
   width: 2000px;
   height: 100%;
-  background: var(--color-two);
+  background: black;
 }
 
 .main-menu .navigation > li .mega-menu .menu-inner{
@@ -680,7 +680,7 @@
   z-index:100;
   opacity: 1;
   text-align:left;
-  background: var(--color-two);
+  background: black;
   border: none;
   border-radius:0;
   -webkit-box-shadow:2px 2px 10px 1px rgba(0,0,0,0.03),-2px 0px 10px 1px rgba(0,0,0,0.03);
@@ -834,7 +834,7 @@ body.visible-sidebar{
   bottom: 0;
   width: 100%;
   max-width: 360px;
-  background: var(--color-two);
+  background: black;
   height: 100%;
   overflow-y: auto;
   z-index: 9999;
@@ -865,7 +865,7 @@ body.visible-sidebar{
 
 .hidden-bar .inner-box{
   position:relative;
-  background-color: var(--color-two);
+  background-color: black;
   padding-top: 75px;
   padding-bottom: 50px;
 }
@@ -935,7 +935,7 @@ body.visible-sidebar{
 .hidden-bar .info li{
   position: relative;
   line-height: 1.6em;
-  color: var(--color-one);
+  color: black;
   margin-bottom: 10px;
 }
 
@@ -944,7 +944,7 @@ body.visible-sidebar{
 }
 
 .hidden-bar .info li a{
-  color: var(--color-one);
+  color: black;
 }
 
 .hidden-bar .info li a:hover{
@@ -1137,7 +1137,7 @@ body.visible-sidebar{
   overflow-y:auto;
   z-index: 99999;
   opacity: 0;
-  background:var(--color-two) url(../images/resource/pattern-dark.png) center top repeat;
+  background:black url(../images/resource/pattern-dark.png) center top repeat;
   visibility: hidden;
   -webkit-transition: all 0.5s ease;
   -moz-transition: all 0.5s ease;
@@ -1176,7 +1176,7 @@ body.visible-sidebar{
 
 .info-bar .inner-box{
   position:relative;
-  background:var(--color-two) url(../images/resource/pattern-dark.png) center top repeat;
+  background:black url(../images/resource/pattern-dark.png) center top repeat;
   padding-top: 100px;
   padding-bottom: 50px;
   padding-left: 30px;
@@ -1345,7 +1345,7 @@ body.visible-sidebar{
 .banner-section{
   position: relative;
   padding: 0 0;
-  background: var(--color-two);
+  background: black;
 }
 
 .banner-section .bottom-curve {
@@ -1899,7 +1899,7 @@ body.visible-sidebar{
 
 .we-offer-section{
   position: relative;
-  background: var(--color-one);
+  background: black;
 }
 
 .we-offer-section .auto-container{
@@ -2081,7 +2081,7 @@ body.visible-sidebar{
 
 .story-section{
   position: relative;
-  background-color:var(--color-two);
+  background-color:black;
 }
 
 .story-section .title-box{
@@ -2367,7 +2367,7 @@ body.visible-sidebar{
 .menu-section{
   position: relative;
   overflow: hidden;
-  background-color:var(--color-one);
+  background-color:#000000;
 }
 
 .tabs-box{
@@ -2386,8 +2386,7 @@ body.visible-sidebar{
 
 .tabs-box .tabs-content{
   position: relative;
-  background-color:var(--color-two);
-  background-image:url(../images/background/menu-bg-paper.jpg);
+  background-color:#000000;
   background-repeat: repeat;
   background-position: top center;
   background-size: cover;
@@ -2401,7 +2400,7 @@ body.visible-sidebar{
   top: 0;
   width: 70px;
   height: 100%;
-  background-color:var(--color-two);
+  background-color:black;
   background-image:url(../images/resource/pattern-black.png);
   background-repeat: repeat;
   background-position: top center;
@@ -2673,7 +2672,7 @@ body.visible-sidebar{
 }
 
 .fluid-section.special-dish-slider .inner {
-  background-color: var(--color-one);
+  background-color: black;
   background:url(../images/resource/pattern-dark.png) repeat;
   padding: 100px 0;
   position: relative;
@@ -2689,7 +2688,7 @@ body.visible-sidebar{
 }
 
 .fluid-section.special-dish-slider .special-title {
-  background: var(--color-two);
+  background: black;
   border: solid 1px var(--white-color-opacity-three);
   padding: 0 30px;
   margin: 0;
@@ -3176,11 +3175,11 @@ body.visible-sidebar{
 }
 
 .reserve-section.splitscreen .reserv-col{
-  background-color: var(--color-two);
+  background-color: black;
 }
 
 .reserve-section.splitscreen .reserv-col .inner{
-  background-color: var(--color-two);
+  background-color: black;
 }
 
 .reserve-section.splitscreen .reserv-col .inner{
@@ -3221,7 +3220,7 @@ body.visible-sidebar{
 }
 
 .reserve-section.style-two .reserv-col{
-  background-color: var(--color-two);
+  background-color: black;
 }
 
 .reserve-section.style-two .reserv-col .inner .title-box h2 {
@@ -3269,7 +3268,7 @@ body.visible-sidebar{
 .reserve-section.style-two.reserve-page-2 {
 	padding-top: 200px;
 	background:url(../images/resource/pattern-dark.png) repeat;
-	background-color: var(--color-one);
+	background-color: black;
 }
 
 .reserve-section.style-two.reserve-page-2 .form-col {
@@ -3337,7 +3336,7 @@ body.visible-sidebar{
 
 .team-section{
   position: relative;
-  background-color:var(--color-two);
+  background-color:black;
 }
 
 .team-section .row{
@@ -3500,7 +3499,7 @@ body.visible-sidebar{
 .intro-section{
   position: relative;
   padding: 300px 0;
-  background: var(--color-two);
+  background: black;
 }
 
 .intro-section .image-layer{
@@ -3541,7 +3540,7 @@ body.visible-sidebar{
   text-align: center;
   line-height: 140px;
   font-size: 24px;
-  color: var(--color-one);
+  color: black;
   background-color: var(--white-color);
   border: 2px solid var(--white-color);
   border-radius: 50%;
@@ -3549,8 +3548,8 @@ body.visible-sidebar{
 
 .intro-section .content-box .play-btn .theme-btn:hover{
   color: var(--main-color);
-  border-color: var(--color-one);
-  background-color: var(--color-one);
+  border-color: black;
+  background-color: black;
 }
 
 .intro-section .content-box .play-btn .ripple,
@@ -3622,7 +3621,7 @@ body.visible-sidebar{
 
 .news-section{
   position: relative;
-  background: var(--color-one);
+  background: black;
 }
 
 .news-section .auto-container{
@@ -3757,7 +3756,7 @@ body.visible-sidebar{
 
 .ig-post-section{
   position: relative;
-  background: var(--color-two);
+  background: black;
 }
 
 .ig-post-section .ig-post-block .ig-post-image img{
@@ -3902,7 +3901,7 @@ body.visible-sidebar{
   border: 1px solid var(--white-color-opacity-four);
   padding-right: 50px;
   color: var(--white-color);
-  background-color: var(--color-two);
+  background-color: black;
 }
 
 .blog_list_section .blog_right_side .blog_search_block form .form_inner button {
@@ -4174,7 +4173,7 @@ body.visible-sidebar{
 }
 
 .blog_detail_section .blog_inner_pannel .quote_block {
-  background-color: var(--color-two);
+  background-color: black;
   padding: 55px 35px 30px 45px;
   position: relative;
   margin: 40px 80px 40px 80px;
@@ -4325,7 +4324,7 @@ body.visible-sidebar{
   color: var(--white-color);
   padding: 15px;
   border: 1px solid var(--white-color-opacity-four);
-  background-color: var(--color-one);
+  background-color: black;
   border-radius: 0px;
 }
 
@@ -4353,7 +4352,7 @@ body.visible-sidebar{
 
 .main-footer{
   position: relative;
-  background: var(--color-one);
+  background: black;
 }
 
 .main-footer .upper-section{
@@ -4411,7 +4410,7 @@ body.visible-sidebar{
 
 .main-footer .info-col{
   position: relative;
-  color: var(--color-one);
+  color: black;
   z-index: 1;
 }
 
@@ -4604,7 +4603,7 @@ footer .bottom_footer .social_media li a {
 
 footer .bottom_footer .social_media li a:hover {
     background-color: var(--main-color);
-    color: var(--color-one);
+    color: black;
 }
 
 
@@ -4689,7 +4688,7 @@ footer .bottom_footer .social_media li a:hover {
 
 .fluid-section{
   position: relative;
-  background: var(--color-two);
+  background: black;
 }
 
 .fluid-section .outer-container{
@@ -4825,7 +4824,7 @@ footer .bottom_footer .social_media li a:hover {
 
 .services-section{
   position: relative;
-  background-color:var(--color-two);
+  background-color:black;
   z-index: 1;
 }
 
@@ -4958,7 +4957,7 @@ footer .bottom_footer .social_media li a:hover {
 
 .menu-cat{
   position: relative;
-  background-color:var(--color-two);
+  background-color:#000000;
 }
 
 .menu-cat .menucat-list{
@@ -5091,7 +5090,7 @@ footer .bottom_footer .social_media li a:hover {
 
 .testimonials-two{
   position: relative;
-  background: var(--color-one);
+  background: black;
 }
 
 .special-offer .carousel-box{
@@ -5105,7 +5104,7 @@ footer .bottom_footer .social_media li a:hover {
 .testimonials-two .testi-block .inner-box{
   position: relative;
   padding: 40px;
-  background: var(--color-one);
+  background: black;
   border: solid 1px var(--color-four);
   text-align: center;
 }
@@ -5269,7 +5268,7 @@ footer .bottom_footer .social_media li a:hover {
     display: flex;
     gap: 2px;
     border:solid 1px var(--white-color-opacity-three);
-    background-color: var(--color-two);
+    background-color: black;
     color: var(--main-color);
     padding: 0 14px;
     border-radius: 100px;
@@ -5318,7 +5317,7 @@ footer .bottom_footer .social_media li a:hover {
 .testimonials-masonry .testi-block .inner-box{
   position: relative;
   padding: 40px;
-  background: var(--color-one);
+  background: black;
   border: solid 1px var(--color-four);
   text-align: center;
 }
@@ -5388,7 +5387,7 @@ footer .bottom_footer .social_media li a:hover {
 
 .why-us-two{
   position: relative;
-  background-color:var(--color-two);
+  background-color:black;
 }
 
 .why-us-two .left-bg{
@@ -5496,7 +5495,7 @@ footer .bottom_footer .social_media li a:hover {
 .why-block-two .text{
   position: relative;
   font-size: 14px;
-  color: var(--color-one);
+  color: black;
 }
 
 
@@ -5537,7 +5536,7 @@ footer .bottom_footer .social_media li a:hover {
 
 .chef-section-1{
   position: relative;
-  background-color:var(--color-one);
+  background-color:black;
 }
 
 .chef-section-1 .title-box{
@@ -5643,7 +5642,7 @@ footer .bottom_footer .social_media li a:hover {
 
 .image-gallery{
   position: relative;
-  background-color:var(--color-two);
+  background-color:black;
   overflow: hidden;
 }
 
@@ -5763,11 +5762,11 @@ footer .bottom_footer .social_media li a:hover {
 .menu-one{
   position: relative;
   overflow: hidden;
-  background-color:var(--color-one);
+  background-color:black;
 }
 
 .menu-one .row{
-  background-color:var(--color-two);
+  background-color:black;
   background-image:url(../images/background/menu-bg-paper.jpg);
   background-repeat: repeat;
   background-position: top center;
@@ -5838,7 +5837,7 @@ footer .bottom_footer .social_media li a:hover {
   top: 0;
   width: 70px;
   height: 100%;
-  background-color:var(--color-two);
+  background-color:black;
   background-image:url(../images/resource/pattern-black.png);
   background-repeat: repeat;
   background-position: top center;
@@ -5957,7 +5956,7 @@ footer .bottom_footer .social_media li a:hover {
   line-height: 16px;
   padding: 2px 6px;
   font-size: 12px;
-  color: var(--color-one);
+  color: black;
   background: var(--main-color);
   margin-left: 6px;
   border-radius: 3px;
@@ -5974,7 +5973,7 @@ footer .bottom_footer .social_media li a:hover {
 .menu-one .menu-col .dish-block .desc{
   position: relative;
   font-size: 15px;
-  color: var(--color-one);
+  color: black;
   max-width: 430px;
 }
 
@@ -5995,7 +5994,7 @@ footer .bottom_footer .social_media li a:hover {
 .menu-card-style-section{
   position: relative;
   overflow: hidden;
-  background-color:var(--color-one);
+  background-color:black;
 }
 
 .menu-card-style-section .title-box{
@@ -6218,7 +6217,7 @@ footer .bottom_footer .social_media li a:hover {
 .menu-card-style .menu-col .dish-block .desc{
   position: relative;
   font-size: 15px;
-  color: var(--color-one);
+  color: black;
   max-width: 350px;
 }
 
@@ -6236,7 +6235,7 @@ footer .bottom_footer .social_media li a:hover {
 
 .special-offer-two{
   position: relative;
-  background-color:var(--color-one);
+  background-color:black;
 }
 
 .special-offer-two .auto-container{
@@ -6249,7 +6248,7 @@ footer .bottom_footer .social_media li a:hover {
 }
 
 .special-offer-two.main-dish {
-  background-color: var(--color-two);
+  background-color: black;
 }
 
 .offer-block-three{
@@ -6288,7 +6287,7 @@ footer .bottom_footer .social_media li a:hover {
   transform: translateX(-50%);
   z-index: 100;
   background-color: var(--main-color);
-  color: var(--color-one);
+  color: black;
   text-transform: uppercase;
   font-size: 14px;
   letter-spacing: 1px;
@@ -6299,7 +6298,7 @@ footer .bottom_footer .social_media li a:hover {
 
 .offer-block-three .inner-box.special-box:hover .special-tag{
   background-color: var(--white-color);
-  color: var(--color-one);
+  color: black;
   transition: all ease .3s;
 }
 
@@ -6493,11 +6492,11 @@ footer .bottom_footer .social_media li a:hover {
 
 .menu-two{
   position: relative;
-  background-color:var(--color-one);
+  background-color:black;
 }
 
 .menu-two.alt-bg{
-  background-color:var(--color-two);
+  background-color:black;
 }
 
 .menu-two .menu-col .inner{
@@ -6621,7 +6620,7 @@ footer .bottom_footer .social_media li a:hover {
 .menu-two .dish-block .desc{
   position: relative;
   font-size: 15px;
-  color: var(--color-one);
+  color: black;
 }
 
 .menu-two .dish-block .desc a{
@@ -6639,7 +6638,7 @@ footer .bottom_footer .social_media li a:hover {
 
 .contact-page{
   position: relative;
-  background: var(--color-one);
+  background: black;
 }
 
 .contact-page .loc-block.info-block {
@@ -6761,7 +6760,7 @@ footer .bottom_footer .social_media li a:hover {
 }
 
 .contact-map {
-  background-color: var(--color-one);
+  background-color: black;
   position: relative;
 }
 
@@ -6817,7 +6816,7 @@ footer .bottom_footer .social_media li a:hover {
 
 .chef-section{
   position: relative;
-  background: var(--color-one);
+  background: black;
 }
 
 .chef-section .title-box.centered {
@@ -6976,7 +6975,7 @@ footer .bottom_footer .social_media li a:hover {
 ***/
 
 .gallery-page {
-	background-color: var(--color-one);
+	background-color: black;
 }
 
 .masonry {
