--- a/eat/public/assets/css/global.css
+++ b/eat/public/assets/css/global.css
@@ -127,7 +127,7 @@ body {
     font-family: var(--font-family-Urbanist);
     font-size:16px;
     color:var(--text-color);
-    background: var(--color-one);
+    background: #000000;
     line-height:1.85em;
     font-weight:400;
     letter-spacing: 1px;
@@ -628,8 +628,8 @@ img{
     line-height: 34px;
     font-weight: 400;
     padding: 10px 20px;
-    background-color: var(--color-one);
-    border: 1px solid var(--white-color-opacity-four);
+    background-color: grey;
+    border: 6px solid var(--white-color-opacity-four);
     border-radius: 0px;
     -webkit-transition: all 300ms ease;
     -ms-transition: all 300ms ease;
